--- a/src/sampling_usages/exploring-corpora.ipynb
+++ b/src/sampling_usages/exploring-corpora.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 1,
    "id": "0e53bcca-6ebb-419a-9cac-8266af0a3192",
    "metadata": {},
    "outputs": [],
@@ -18,62 +18,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "id": "3d9292bc-00bd-414d-850a-125e58b8fcdb",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "        0                                                  1  \\\n",
-      "0  правда  Что в нем может быть не в порядке , если он ес...   \n",
-      "1  правда  \"\"\"И правда , что \"\"\"\" жизнь ведь тоже только ...   \n",
-      "2  правда  - - Порядочный дебил , правда - - быстро спрос...   \n",
-      "3  правда  Под шуршание полозьев и занимательную повесть ...   \n",
-      "4  правда  Ты ведь ей за это заплатишь , правда Она говор...   \n",
-      "\n",
-      "  ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆  \n",
-      "0  то, что существует в действительности, истинно...                                                   \n",
-      "1  в знач. сказуемого : то, что является истинным...                                                   \n",
-      "2  в знач. сказуемого : то же, что действительно,...                                                   \n",
-      "3         неисч. истинность, достоверность чего-либо                                                   \n",
-      "4  в знач. сказуемого : то, что является истинным...                                                   \n",
-      "         0                                                  1  \\\n",
-      "0  бригада  Весной , летом и осенью за ним присматривает с...   \n",
-      "1  бригада  Суточные бригады трудятся на подстанциях кто д...   \n",
-      "2  бригада  В то самое время мимо кочевала другая бригада ...   \n",
-      "3  бригада  \"\"\"Трудно даже подсчитать , какие барыши прино...   \n",
-      "4  бригада  - - Валерий Иванович , в 90-е годы , да и сейч...   \n",
-      "\n",
-      "  ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆  \n",
-      "0  группа лиц, выполняющая определённый комплекс ...                                                   \n",
-      "1  группа лиц, выполняющая определённый комплекс ...                                                   \n",
-      "2  группа людей, выполняющая определённый комплек...                                                   \n",
-      "3                 крим. жарг. преступная группировка                                                   \n",
-      "4  группа лиц, выполняющая определённый комплекс ...                                                   \n",
-      "      0                                                  1  \\\n",
-      "0  брат  Да нет же , брат , нет , ты выдумал , ей-богу ...   \n",
-      "1  брат  Даже смерть актрисы Колпаковой была вплетена в...   \n",
-      "2  брат  Повторяю , что я тебе более чем друг , я тебе ...   \n",
-      "3  брат  Ревякин , обнимая размякшего Матвея Савельева ...   \n",
-      "4  брат  Но , проездив несколько лет , братья однажды ч...   \n",
-      "\n",
-      "  ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆ ◆  \n",
-      "0  употребляется как фамильярное или дружеское об...                                                   \n",
-      "1  лицо мужского пола, принадлежащее к одной семь...                                                   \n",
-      "2  истор. в Российском государстве до 1917 г. и в...                                                   \n",
-      "3  употребляется как фамильярное или дружеское об...                                                   \n",
-      "4  обычно мн. ч., разг. один из братьев [ 1 ], ли...                                                   \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for tsv in glob(\"../../defgen/russian/*.gz\"):\n",
     "    data = pd.read_csv(tsv,\n",
     "        sep='\\t', quoting=csv.QUOTE_NONE, compression=\"gzip\"\n",
     ")\n",
-    "    print(data.head())\n",
     "    data.to_csv(f\"../../defgen/russian/beam/{os.path.split(tsv)[-1]}\",\n",
     "        sep='\\t', quoting=csv.QUOTE_NONE, compression=\"gzip\", header=None, index=None)"
    ]
@@ -1240,86 +1193,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": null,
    "id": "14462a0f-416e-4fd7-a869-32bbe9ae4dcb",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(89147, 2)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>112642</th>\n",
-       "      <td>правда</td>\n",
-       "      <td>Что в нем может быть не в порядке , если он ес...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>66045</th>\n",
-       "      <td>правда</td>\n",
-       "      <td>И правда , что \" жизнь ведь тоже только миг , ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>290721</th>\n",
-       "      <td>правда</td>\n",
-       "      <td>- - Порядочный дебил , правда - - быстро спрос...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>145059</th>\n",
-       "      <td>правда</td>\n",
-       "      <td>Под шуршание полозьев и занимательную повесть ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>144951</th>\n",
-       "      <td>правда</td>\n",
-       "      <td>Ты ведь ей за это заплатишь , правда Она говор...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "             0                                                  1\n",
-       "112642  правда  Что в нем может быть не в порядке , если он ес...\n",
-       "66045   правда  И правда , что \" жизнь ведь тоже только миг , ...\n",
-       "290721  правда  - - Порядочный дебил , правда - - быстро спрос...\n",
-       "145059  правда  Под шуршание полозьев и занимательную повесть ...\n",
-       "144951  правда  Ты ведь ей за это заплатишь , правда Она говор..."
-      ]
-     },
-     "execution_count": 176,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "data = pd.read_csv(\n",
     "    \"../../acl_data/home-m-corpora-acl-parsed-russian-corpus2.conllu.gz.txt.gz\",\n",
@@ -1334,92 +1211,15 @@
     "    new_data = pd.concat((new_data, this_word))\n",
     "new_data = new_data.drop_duplicates()\n",
     "print(new_data.shape)\n",
-    "new_data.to_csv(\"../../acl_data/russian/russian-corpus2.txt.gz\", index=False, sep=\"\\t\", compression=\"gzip\")\n",
-    "new_data.head()"
+    "new_data.to_csv(\"../../acl_data/russian/russian-corpus2.txt.gz\", index=False, sep=\"\\t\", compression=\"gzip\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": null,
    "id": "7ec8d57b-655f-44b9-8daf-fb574c6847f6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(93948, 2)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>489397</th>\n",
-       "      <td>бригада</td>\n",
-       "      <td>Весной , летом и осенью за ним присматривает с...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>310826</th>\n",
-       "      <td>бригада</td>\n",
-       "      <td>Суточные бригады трудятся на подстанциях кто д...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1886866</th>\n",
-       "      <td>бригада</td>\n",
-       "      <td>В то самое время мимо кочевала другая бригада ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1563403</th>\n",
-       "      <td>бригада</td>\n",
-       "      <td>Трудно даже подсчитать , какие барыши приносил...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1845132</th>\n",
-       "      <td>бригада</td>\n",
-       "      <td>- - Валерий Иванович , в 90-е годы , да и сейч...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "               0                                                  1\n",
-       "489397   бригада  Весной , летом и осенью за ним присматривает с...\n",
-       "310826   бригада  Суточные бригады трудятся на подстанциях кто д...\n",
-       "1886866  бригада  В то самое время мимо кочевала другая бригада ...\n",
-       "1563403  бригада  Трудно даже подсчитать , какие барыши приносил...\n",
-       "1845132  бригада  - - Валерий Иванович , в 90-е годы , да и сейч..."
-      ]
-     },
-     "execution_count": 177,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "data = pd.read_csv(\n",
     "    \"../../acl_data/home-m-corpora-acl-parsed-russian-corpus3.conllu.gz.txt.gz\",\n",
@@ -1435,8 +1235,7 @@
     "    new_data = pd.concat((new_data, this_word))\n",
     "new_data = new_data.drop_duplicates()\n",
     "print(new_data.shape)\n",
-    "new_data.to_csv(\"../../acl_data/russian/russian-corpus3.txt.gz\", index=False, sep=\"\\t\", compression=\"gzip\")\n",
-    "new_data.head()"
+    "new_data.to_csv(\"../../acl_data/russian/russian-corpus3.txt.gz\", index=False, sep=\"\\t\", compression=\"gzip\")"
    ]
   }
  ],
